namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: react-node-cms
  annotations:
    field.cattle.io/projectId: "local:p-6bdjb"
