deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-node-cms
  namespace: react-node-cms
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-node-cms
  template:
    metadata:
      labels:
        app: react-node-cms
    spec:
      containers:
        - name: app
          image: 527165314912.dkr.ecr.us-east-1.amazonaws.com/react-node-cms:latest
          ports:
            - containerPort: 3008
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
