service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-node-cms
  namespace: react-node-cms
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  selector:
    app: react-node-cms
  ports:
    - port: 80
      targetPort: 3008
      protocol: TCP
